--- a/static/hb.css
+++ b/static/hb.css
@@ -9,6 +9,17 @@ body {
     /*border: 1px solid black;*/
 }
 
+#initiate {
+  text-align: center;
+  margin: auto;
+  border-style: solid;
+  border-color: #38d47f;
+  border-radius: 4px;
+  padding: 15px;
+  width: 60%;
+  border-width: 5px;
+}
+
 #player {
     margin: auto;
 }
@@ -121,4 +132,101 @@ body {
   {
     transform: scale( .75 );
   }
+}
+
+.button-53 {
+  background-color: #38d47f;
+  border: 0 solid #E5E7EB;
+  box-sizing: border-box;
+  color: #000000;
+  /*display: flex;*/
+  font-family: ui-sans-serif,system-ui,-apple-system,system-ui,"Segoe UI",Roboto,"Helvetica Neue",Arial,"Noto Sans",sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol","Noto Color Emoji";
+  font-size: 1rem;
+  font-weight: 700;
+  justify-content: center;
+  line-height: 1.5rem;
+  padding: .5rem 1.5rem;
+  text-align: center;
+  text-decoration: none #000000 solid;
+  text-decoration-thickness: auto;
+  width: 100%;
+  max-width: 200px;
+  /*position: relative;*/
+  cursor: pointer;
+  transform: rotate(-2deg);
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+}
+.button-53:focus {
+  outline: 0;
+}
+.button-53:after {
+  content: '';
+  position: absolute;
+  border: 1px solid #000000;
+  bottom: 4px;
+  left: 4px;
+  width: calc(100% - 1px);
+  height: calc(100% - 1px);
+}
+.button-53:hover:after {
+  bottom: 2px;
+  left: 2px;
+}
+@media (min-width: 768px) {
+  .button-53 {
+    padding: .75rem 3rem;
+    font-size: 1.25rem;
+  }
+}
+
+/* The Modal (background) */
+.modal {
+  display: none; /* Hidden by default */
+  position: fixed; /* Stay in place */
+  z-index: 1; /* Sit on top */
+  left: 0;
+  top: 0;
+  width: 100%; /* Full width */
+  height: 100%; /* Full height */
+  overflow: auto; /* Enable scroll if needed */
+  background-color: rgb(0,0,0); /* Fallback color */
+  background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+}
+
+/* Modal Content/Box */
+.modalcontent {
+  background-color: #fefefe;
+  margin: 15% auto; /* 15% from the top and centered */
+  padding: 20px;
+  text-align: center;
+  border: 1px solid #888;
+  width: 30%; /* Could be more or less, depending on screen size */
+}
+
+/* The Close Button */
+.close {
+  color: #aaa;
+  float: right;
+  font-size: 28px;
+  font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+  color: black;
+  text-decoration: none;
+  cursor: pointer;
+}
+
+.ico {
+  height: 100px;
+  width: 100px;
+}
+
+.roundbutton {
+  border-radius: 8px;
+  padding: 10px;
+  border-color: #38d47f;
 }
